--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -1,3 +1,8 @@
+/* Header styles */
+.text-white {
+  color: white;
+}
+
 /* Custom CSS for hover effect */
 .hover-effect {
   position: relative;
@@ -16,29 +21,6 @@
     0 0 10px rgba(255, 255, 255, 0.7); /* Right */
   transform: scale(1.2); /* Scale effect */
 }
-/* Header styles */
-.text-white {
-  color: white;
-}
-
-/* Custom CSS for hover effect */
-.hover-effect {
-  position: relative;
-  color: white;
-  font-size: 1.25rem; /* Adjust font size */
-  transition: color 1s ease, text-shadow 0.5s ease;
-  text-decoration: none; /* Remove underline */
-}
-
-.hover-effect:hover {
-  color: white;
-  text-shadow:
-    0 0 10px rgba(255, 255, 255, 0.7), /* Top */
-    0 0 10px rgba(255, 255, 255, 0.7), /* Bottom */
-    0 0 10px rgba(255, 255, 255, 0.7), /* Left */
-    0 0 10px rgba(255, 255, 255, 0.7); /* Right */
-  transform: scale(1.2); /* Scale effect */
-}
 
 /* Scrolled state styles */
 .bg-black {
@@ -47,4 +29,30 @@
 
 .shadow-md {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Glass effect */
+.header-glass {
+  /* background: rgba(255, 255, 255, 0.2); */
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  /* border: 1px solid rgba(255, 255, 255, 0.3); */
+}
+
+/* Sticky header */
+.sticky {
+  position: -webkit-sticky; /* For Safari */
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.hover-effect {
+  transition: color 0.3s, transform 0.3s;
+}
+
+.hover-effect:hover {
+  color: #000;
+  transform: scale(1.05);
 }
