Footer Changed + Image Removed

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,5 @@
   font-style: italic;
 }
 body {
-  background-image: url("../src/assets/mesh.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: rgb(19, 19, 19);
 }
